--- a/manifests/jenkins.yml
+++ b/manifests/jenkins.yml
@@ -1,4 +1,35 @@
 ---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRole
+metadata:
+  name: jenkins-cluster-deployer-role
+rules:
+  # Allow management of Deployments and Services
+  - apiGroups: ["apps", ""]
+    resources: ["deployments", "services"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+  # Allow viewing Pods for debugging
+  - apiGroups: [""]
+    resources: ["pods"]
+    verbs: ["get", "list", "watch", "logs"]
+  # Allow management of RBAC resources
+  - apiGroups: ["rbac.authorization.k8s.io"]
+    resources: ["roles", "rolebindings"]
+    verbs: ["get", "list", "watch", "create", "update", "patch", "delete"]
+---
+apiVersion: rbac.authorization.k8s.io/v1
+kind: ClusterRoleBinding
+metadata:
+  name: jenkins-cluster-deployer-binding
+subjects:
+  - kind: ServiceAccount
+    name: default
+    namespace: default
+roleRef:
+  kind: ClusterRole
+  name: jenkins-cluster-deployer-role
+  apiGroup: rbac.authorization.k8s.io
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
